# Fisher_Quant

./: .gitignore  run_eval.sh  test_models_comprehensive.sh
gradients/: datautils.py  requirements.txt  run-fisher.py  utils.py
quant/: README.md  llama_simquant.py  pyproject.toml
quant/kvquant/: datautils.py  simquant_module_quantizer.py  simquant_module_quantizer_dbrx.py
