[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kvquant"
version = "0.1.0"
description = "Low-Precision KV Cache Quantization."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate",
    "sentencepiece",
    "tokenizers>=0.12.1",
    "torch",
    "transformers>=4.28.0",
    "datasets",
    "scikit-learn",
    "matplotlib",
    "protobuf",
    "mistral-common>=1.6.0",
    "cuml-cu12"
]

[tool.setuptools.packages.find]
